# gaijin_games

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h
client/scenarios/: scenarios.h
message/: CMakeLists.txt  bson_conv.cpp  bson_conv.h  message.cpp  message.h
server/: CMakeLists.txt  config.txt  data_writer.cpp  data_writer.h  server.cpp  server.h  statister.cpp  statister.h
